Bugzilla bug #86880: Map ECONNABORTED to PR_CONNECT_ABORTED_ERROR. Thanks to Mark Wahl of Sun Microsystems for the bug report.